# comp_4555_term_game

./: Cargo.toml  README.md  config.ron  release.toml
assets/: world_1.ron
src/: component.rs  config.rs  enums.rs  event.rs  main.rs  resource.rs  state.rs  system.rs  ui.rs
src/component/: velocity.rs
src/resource/: config.rs  counter.rs  player_moved_flag.rs  round.rs  store.rs  tilemap.rs  weapons.rs
src/state/: game_over.rs  main_menu.rs  playing.rs
src/system/: bullet.rs  character_killer.rs  collisions.rs  enemy_movement.rs  enemy_spawner.rs  example.rs  game_over_inputs.rs  hud.rs  main_menu_inputs.rs  map_scroll.rs  player_movement.rs  playing_inputs.rs  round_manager.rs  run_commands.txt  velocity.rs
