[package]
name = "comp_4555_term_game"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
# The dynamic feature means dynamic linking. It makes compilations faster.
bevy = { version = "0.9.0", features = ["dynamic"] }
log = "0.4.17"
ron = "0.8.0"
serde = "1.0.147"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
